<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/personal"
            app:tint="@color/mainapp" />



        <TextView
            android:id="@+id/errorView"
            android:layout_below="@id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/firstName"
            android:layout_below="@+id/errorView"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint=" First Name"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/account"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_below="@+id/firstName"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint=" Last Name"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/account"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/mobile"
            android:layout_below="@+id/lastName"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/mobile"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/phone"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/email"
            android:padding="10dp"
            android:layout_below="@+id/mobile"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/email"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/lock"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/cpassword"
            android:layout_below="@+id/password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/cpassword"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/lock"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/city"
            android:layout_below="@+id/cpassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/city"
            android:textColorHint="@color/black"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/date"
            android:layout_below="@+id/city"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/date"
            android:textColorHint="@color/black"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/gender"
            android:layout_below="@+id/date"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/gender"
            android:textColorHint="@color/black"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:textColor="@color/mainapp"
            android:text="@string/login"
            />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:alpha="0.8"
            android:backgroundTint="@color/mainapp"
            android:text="SIGNUP"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>



</ScrollView>